--- a/contact.html
+++ b/contact.html
@@ -108,11 +108,11 @@
     <section class="page-title">
         <div style="background-image: url(/img/main_page_title.jpg)" cover class="img_ser">
             <div id="breadcrumb_inner" class="col col-xs-12">
-                <h1 class="about_s">Contact Us</h1>
+                <h1 class="about_s">Contact</h1>
                 <nav aria-label="breadcrumb">
                     <ol class="breadcrumb">
                         <li class="breadcrumb-item"><a href="#">Home</a></li>
-                        <li class="breadcrumb-item active" aria-current="page">Contact Us</li>
+                        <li class="breadcrumb-item active" aria-current="page">Contact</li>
                     </ol>
                 </nav>
 
@@ -120,11 +120,55 @@
         </div> <!-- end row -->
         </div> <!-- end container -->
     </section>
-    
-
-
-
-
+            <!-- start contact-pg-section -->
+            <section class="contact-pg-section section-padding">
+                <div class="container">
+                    <div class="row">
+                        <div class="col col-md-8 col-md-offset-2">
+                            <div class="section-title-s3">
+                                <h2>Drop us a line</h2>
+                                <p>Outlines modern global logistics and the value of air, ocean, and ground freight. Logistics in the United States accounted  logistics is spent</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col col-xs-12">
+                            <div class="contact-form">
+                                <form method="post" class="contact-validation-active" id="contact-form-main">
+                                    <div class="one-third-col">
+                                        <input type="text" class="form-control" name="name" id="name" placeholder="Your Name" required>
+                                    </div>
+                                    <div class="one-third-col">
+                                        <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required>
+                                    </div>
+                                    <div class="one-third-col">
+                                        <input type="text" class="form-control" name="phone" id="phone" placeholder="Your Phone" required>
+                                    </div>
+                                    <div>
+                                        <textarea class="form-control" name="note"  id="note" placeholder="Case Description..."></textarea>
+                                    </div>
+                                    <div class="submit-btn-wrapper">
+                                        <button type="submit" class="theme-btn-s2">Submit now</button>
+                                        <div id="loader">
+                                            <i class="ti-reload"></i>
+                                        </div>
+                                    </div>
+                                    <div class="clearfix error-handling-messages">
+                                        <div id="success">Thank you</div>
+                                        <div id="error"> Error occurred while sending email. Please try again later. </div>
+                                    </div>
+                                </form>
+                            </div>
+                        </div>     
+                        <div class="col col-xs-12">     
+                            <div class="contact-map">
+                                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d193595.9147703055!2d-74.11976314309273!3d40.69740344223377!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c24fa5d33f083b%3A0xc80b8f06e177fe62!2sNew+York%2C+NY%2C+USA!5e0!3m2!1sen!2sbd!4v1547528325671" allowfullscreen></iframe>
+                            </div>
+                       </div>
+                 </div>
+            </div>
+        </section>
+            <!-- end contact-pg-section -->
     <footer class="footer">
         <div class="footer_content">
             <div class="container">
@@ -165,7 +209,7 @@
         <input type="text" placeholder="Subject">
         <input type="submit" value="Send">
     </div>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="js/jquery-3.6.0.js"></script>
     <script src="js/jquery.fancybox.min.js"></script>
     <script src="js/slick.min.js"></script>
     <script src="js/jquery.formstyler.min.js"></script>
