--- a/servise.html
+++ b/servise.html
@@ -201,7 +201,7 @@
         <input type="text" placeholder="Subject">
         <input type="submit" value="Send">
     </div>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="js/jquery-3.6.0.js"></script>
     <script src="js/jquery.fancybox.min.js"></script>
     <script src="js/slick.min.js"></script>
     <script src="js/jquery.formstyler.min.js"></script>
